Add marker back in for utils

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,6 +21,9 @@ markers =
     main: tests designed to run against the main branch
     release: tests designed to run specifically against a release branch
 
+    # Utils
+    utils: tests for utils (unit tests)
+
     # Business areas
     subjects: tests for subject-based scenarios
     sspi: tests for sspi-based scenarios
