--- a/.github/workflows/build-base.yaml
+++ b/.github/workflows/build-base.yaml
@@ -35,8 +35,14 @@ jobs:
 
       - name: Build, tag, and push Docker image
         env:
-          BRANCH_NAME: ${{ github.ref_name == 'main' && 'latest' || github.ref_name }}
+          BRANCH_NAME: ${{ github.ref_name }}
         run: |
-          IMAGE_TAG="${BRANCH_NAME#*/}"
+          if [ "$BRANCH_NAME" = "main" ]; then
+            IMAGE_TAG="latest"
+          else
+            IMAGE_TAG="${BRANCH_NAME#*/}_current"
+          fi
+          IMAGE_TAG="${IMAGE_TAG,,}"  # Convert to lower case
+
           docker build -f buildBase.dockerfile -t ${{env.ECR_REPOSITORY}}/${{env.IMAGE_NAME}}:$IMAGE_TAG .
           docker push ${{env.ECR_REPOSITORY}}/${{env.IMAGE_NAME}}:$IMAGE_TAG
