--- a/.github/workflows/attach-pr-to-jira.yaml
+++ b/.github/workflows/attach-pr-to-jira.yaml
@@ -22,7 +22,7 @@ jobs:
         shell: bash
         run:
           python -m pip install --upgrade pip
-          pip install jira
+          pip install 'jira[cli]'
 
       - name: Run Python script to attach PR to JIRA
         env:
