--- a/.github/workflows/attach-pr-to-jira.yaml
+++ b/.github/workflows/attach-pr-to-jira.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         shell: bash
-        run:
+        run: |
           python -m pip install --upgrade pip
           pip install 'jira[cli]'
 
@@ -30,4 +30,5 @@ jobs:
           JIRA_TOKEN: ${{ secrets.JIRA_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
           BRANCH_NAME: ${{ github.head_ref }}
-        run: python scripts/python/attach_pr_to_jira.py
+        run: |
+          python scripts/python/attach_pr_to_jira.py
