--- a/.github/workflows/attach-pr-to-jira.yaml
+++ b/.github/workflows/attach-pr-to-jira.yaml
@@ -2,6 +2,10 @@
 name: Attach PR to JIRA Ticket
 
 on:
+  push:
+    branches:
+      - 'feature/**'
+      - 'main'
   pull_request:
     types: [opened, edited, reopened, synchronize]
 
