--- a/.github/workflows/attach-pr-to-jira.yaml
+++ b/.github/workflows/attach-pr-to-jira.yaml
@@ -34,5 +34,7 @@ jobs:
           JIRA_TOKEN: ${{ secrets.JIRA_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
           BRANCH_NAME: ${{ github.head_ref }}
+          BRANCH_URL: ${{ github.server_url }}/${{ github.repository }}/tree/${{ github.head_ref }}
         run: |
           python scripts/python/attach_pr_to_jira.py
+        timeout-minutes: 3
