--- a/.github/workflows/attach-pr-to-jira.yaml
+++ b/.github/workflows/attach-pr-to-jira.yaml
@@ -8,6 +8,7 @@ on:
       - 'main'
   pull_request:
     types: [opened, edited, reopened, synchronize]
+  workflow_dispatch:
 
 jobs:
   attach-to-jira:
