removed the env url

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,7 @@ log_cli = True
 log_cli_level = INFO
 
 addopts =
-    ; --base-url=https://ci-infra.nonprod.breast-screening-select.nhs.uk
-    --base-url=https://scm-1749.nonprod.breast-screening-select.nhs.uk
+    --base-url=https://ci-infra.nonprod.breast-screening-select.nhs.uk
     --html=test-results/report.html
     --self-contained-html
     --json-report
