db restore updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "codegen",
     "customisable",
     "customised",
+    "datname",
     "dotenv",
     "initialise",
     "Licence",
@@ -17,9 +18,11 @@
     "pytest",
     "pytestmark",
     "pythonpath",
+    "raise",
     "recognise",
     "retcode",
     "ruleset",
+    "SUPERPASS",
     "utilise",
     "utilised",
     "Utilising",
