--- a/.github/workflows/push-ecr.yaml
+++ b/.github/workflows/push-ecr.yaml
@@ -24,10 +24,6 @@ jobs:
       id-token: write
       #
     steps:
-      - id: lowercase
-        name: set lower case registry
-        run: |
-          echo "IMAGE_NAME_LC=${IMAGE_NAME@L}" >> ${GITHUB_ENV}
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -38,6 +34,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - id: lowercase
+        name: set lower case registry
+        run: echo "IMAGE_NAME_LC=${IMAGE_NAME@L}" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: |
