--- a/.github/workflows/push-ecr.yaml
+++ b/.github/workflows/push-ecr.yaml
@@ -36,12 +36,10 @@ jobs:
 
       - id: lowercase
         name: set lower case registry
-        run: echo "IMAGE_NAME_LC=${IMAGE_NAME@L}" >> $GITHUB_ENV
+        run: echo "IMAGE_NAME_LC=playwright" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: |
           docker build -t ${{env.REGISTRY}}/${{IMAGE_NAME_LC}}:latest .
 
-      - name: Push Docker image
-        run: |
-          docker push ${{env.REGISTRY}}/${{IMAGE_NAME_LC}}:latest
+    
