--- a/.github/workflows/push-ecr.yaml
+++ b/.github/workflows/push-ecr.yaml
@@ -36,10 +36,18 @@ jobs:
 
       - id: lowercase
         name: set lower case registry
-        run: echo "IMAGE_NAME_LC=playwright" >> $GITHUB_ENV
+        run: echo "IMAGE_NAME_LC=$IMAGE_NAME" >> $GITHUB_ENV
 
       - name: Use environemnt variable
-        run: echo "The value of IMAGE_NAME is $IMAGE_NAME_LC"
+        run: echo "The value of IMAGE_NAME_LC is $IMAGE_NAME_LC"
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{env.REGISTRY}}/$IMAGE_NAME_LC:latest .
+
+      - name: Push Docker image
+        run: |
+          docker push ${{env.REGISTRY}}/$IMAGE_NAME_LC:latest
 
       
 
