--- a/.github/workflows/push-ecr.yaml
+++ b/.github/workflows/push-ecr.yaml
@@ -36,16 +36,16 @@ jobs:
 
       - id: lowercase
         name: set lower case registry
-        run: IMAGE_NAME=$(echo $IMAGE_NAME | tr '[A-Z]' '[a-z]')
+        run: echo "IMAGE_NAME_LC=${IMAGE_NAME,,}" >> $GITHUB_ENV
 
       
       - name: Build Docker image
         run: |
-          docker build -t ${{env.REGISTRY}}/$IMAGE_NAME:latest .
+          docker build -t ${{env.REGISTRY}}/$IMAGE_NAME_LC:latest .
 
       - name: Push Docker image
         run: |
-          docker push ${{env.REGISTRY}}/$IMAGE_NAME:latest
+          docker push ${{env.REGISTRY}}/$IMAGE_NAME_LC:latest
 
       
 
