--- a/.github/workflows/push-ecr.yaml
+++ b/.github/workflows/push-ecr.yaml
@@ -38,14 +38,16 @@ jobs:
         name: set lower case registry
         run: echo "IMAGE_NAME_LC=${IMAGE_NAME,,}" >> $GITHUB_ENV
 
+      - name: output env variable
+        run: echo "IMAGE_NAME_LC is $IMAGE_NAME_LC"
       
       - name: Build Docker image
         run: |
-          docker build -t ${{env.REGISTRY}}/$IMAGE_NAME_LC:latest .
+          docker build -t ${{env.REGISTRY}}/${{env.IMAGE_NAME_LC}}:latest .
 
       - name: Push Docker image
         run: |
-          docker push ${{env.REGISTRY}}/$IMAGE_NAME_LC:latest
+          docker push ${{env.REGISTRY}}/${{env.IMAGE_NAME_LC}}:latest
 
       
 
