--- a/.github/workflows/push-ecr.yaml
+++ b/.github/workflows/push-ecr.yaml
@@ -33,21 +33,12 @@ jobs:
           registry: ${{env.REGISTRY}}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - id: lowercase
-        name: set lower case registry
-        run: echo "IMAGE_NAME_LC=${IMAGE_NAME,,}" >> $GITHUB_ENV
-
-      - name: output env variable
-        run: echo "IMAGE_NAME_LC is $IMAGE_NAME_LC"
-      
-      - name: Build Docker image
+           
+      - name: Build Docker And Push image
         run: |
-          docker build -t ${{env.REGISTRY}}/${{env.IMAGE_NAME_LC}}:latest .
-
-      - name: Push Docker image
-        run: |
-          docker push ${{env.REGISTRY}}/${{env.IMAGE_NAME_LC}}:latest
+          IMAGE_NAME = "$IMAGE_NAME,,}"
+          docker build -t ${{env.REGISTRY}}/$IMAGE_NAME:latest .
+          docker push ${{env.REGISTRY}}/$IMAGE_NAME:latest
 
       
 
