--- a/.github/workflows/push-ecr.yaml
+++ b/.github/workflows/push-ecr.yaml
@@ -35,8 +35,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
            
       - name: Build Docker And Push image
-        run: |
-          IMAGE_NAME="$IMAGE_NAME,,}"
+        run: |          
+          IMAGE_NAME="${IMAGE_NAME,,}"
           docker build -t ${{env.REGISTRY}}/$IMAGE_NAME:latest .
           docker push ${{env.REGISTRY}}/$IMAGE_NAME:latest
 
