--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,13 +1,10 @@
-name: "CI/CD pull request"
+name: "CI / CD"
 
 # The total recommended execution time for the "CI/CD Pull Request" workflow is around 20 minutes.
 
 on:
-  push:
-    branches:
-      - "**"
-  pull_request:
-    types: [opened, reopened]
+  workflow_call:
+  workflow_dispatch:
 
 jobs:
   metadata:
