--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,12 +39,17 @@
   },
   "cSpell.ignoreWords": [
     "Aldi",
+    "Bakerstreet",
     "Caldecott",
+    "Eastcliffe",
     "Hadley",
     "Poundland",
+    "ZZZLED",
     "cancelButton",
     "dblclick",
+    "domcontentloaded",
     "glyphicon",
+    "nhais",
     "organisations",
     "outcodes",
     "txtbox"
