--- a/.github/workflows/remove-docker-image.yaml
+++ b/.github/workflows/remove-docker-image.yaml
@@ -46,6 +46,7 @@ jobs:
           IMAGE_TAG="${TICKET}_current"
           IMAGE_TAG="${IMAGE_TAG,,}"  # Convert to lower case
 
-          aws ecr list-images --repository-name ${{env.IMAGE_NAME}} --filter "tagStatus=TAGGED" --query "imageIds[?contains(imageTag, \`${IMAGE_TAG}\`)]" --output table || echo "No images found in ECR"
+          REGISTRY="${{ env.ECR_REPOSITORY }}"
+          aws ecr list-images --registry-id ${{secrets.TEXAS_MANAGEMENT_ACCOUNT_ID}} --repository-name ${{env.IMAGE_NAME}} --filter "tagStatus=TAGGED" --query "imageIds[?contains(imageTag, \`${IMAGE_TAG}\`)]" --output table --registry-id $REGISTRY || echo "No images found in ECR"
 
           # docker rmi ${{env.ECR_REPOSITORY}}/${{env.IMAGE_NAME}}:$IMAGE_TAG || echo "Image not found"
