--- a/.github/workflows/remove-docker-image.yaml
+++ b/.github/workflows/remove-docker-image.yaml
@@ -45,6 +45,7 @@ jobs:
           TICKET=$(echo "$BRANCH_NAME" | grep -oiE '[a-z]+[0-9]+-[0-9]+')
           IMAGE_TAG="${TICKET}_current"
           IMAGE_TAG="${IMAGE_TAG,,}"  # Convert to lower case
-         
-          aws ecr list-images --registry-id "461183108257" --repository-name ${{env.IMAGE_NAME}} --filter "tagStatus=TAGGED" --query "imageIds[?contains(imageTag, \`${IMAGE_TAG}\`)]" --output table --registry-id $REGISTRY || echo "No images found in ECR"
+
+          REGISTRY="${{ secrets.TEXAS_MANAGEMENT_ACCOUNT_ID }}"
+          aws ecr list-images --registry-id $REGISTRY --repository-name ${{env.IMAGE_NAME}} --filter "tagStatus=TAGGED" --query "imageIds[?contains(imageTag, \`${IMAGE_TAG}\`)]" --output table || echo "No images found in ECR"
 
