--- a/.github/workflows/untag-docker-image.yaml
+++ b/.github/workflows/untag-docker-image.yaml
@@ -53,3 +53,5 @@ jobs:
 
           aws ecr untag-resource --resource-arn arn:aws:ecr:eu-west-2:461183108257:repository/bs-select-playwright-test --tag-keys ${IMAGE_TAG} || echo "No tags found for the image"
 
+          #aws ecr batch-delete-image --registry-id $REGISTRY --repository-name ${{env.IMAGE_NAME}} --image-ids imageTag=${IMAGE_TAG} || echo "No images found to delete"
+
