--- a/.github/workflows/untag-docker-image.yaml
+++ b/.github/workflows/untag-docker-image.yaml
@@ -37,7 +37,7 @@ jobs:
         with:
           registry: ${{ env.ECR_REPOSITORY }}
 
-      - name: Remove Docker Image
+      - name: Untag Docker Image
         run: |
           # Extract the ticket from the branch name
 
@@ -47,11 +47,8 @@ jobs:
           IMAGE_TAG="${IMAGE_TAG,,}"  # Convert to lower case
 
           REGISTRY="${{ secrets.TEXAS_MANAGEMENT_ACCOUNT_ID }}"
-          aws ecr list-images --registry-id $REGISTRY --repository-name ${{env.IMAGE_NAME}} \
+          aws ecr list-images --registry-id ${{REGISTRY}} --repository-name ${{env.IMAGE_NAME}} \
             --filter tagStatus=TAGGED --query "imageIds[?contains(imageTag, \`${IMAGE_TAG}\`)]" --output table || echo "No images found in ECR"
 
-
-          # aws ecr untag-resource --resource-arn arn:aws:ecr:eu-west-2:461183108257:repository/bs-select-playwright-test --tag-keys ${IMAGE_TAG} || echo "No tags found for the image"
-
-          # aws ecr batch-delete-image --registry-id $REGISTRY --repository-name ${{env.IMAGE_NAME}} --image-ids imageTag=${IMAGE_TAG} || echo "No images found to delete"
+          aws ecr untag-resource --resource-arn arn:aws:ecr:eu-west-2:${{REGISTRY}}:repository/${{env.IMAGE_NAME}} --tag-keys ${IMAGE_TAG} || echo "No tags found for the image"
 
