--- a/.github/workflows/delete-docker-image.yaml
+++ b/.github/workflows/delete-docker-image.yaml
@@ -1,4 +1,4 @@
-name: Untag Docker Image
+name: Delete Docker Image
 
 on:
   push:
@@ -37,7 +37,7 @@ jobs:
         with:
           registry: ${{ env.ECR_REPOSITORY }}
 
-      - name: Untag Docker Image
+      - name: Remove Docker Image
         run: |
           # Extract the ticket from the branch name
 
@@ -50,5 +50,6 @@ jobs:
           aws ecr list-images --registry-id $REGISTRY --repository-name ${{env.IMAGE_NAME}} \
             --filter tagStatus=TAGGED --query "imageIds[?contains(imageTag, \`${IMAGE_TAG}\`)]" --output table || echo "No images found in ECR"
 
-          aws ecr untag-resource --resource-arn arn:aws:ecr:eu-west-2:$REGISTRY:repository/${{env.IMAGE_NAME}} --tag-keys ${IMAGE_TAG} || echo "No tags found for the image"
+          aws ecr batch-delete-image --registry-id $REGISTRY --repository-name ${{env.IMAGE_NAME}} --image-ids imageTag=${IMAGE_TAG} || echo "No images found to delete"
+          echo "Image with tag ${IMAGE_TAG} deleted successfully or did not exist."
 
