Amendment to pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ addopts =
     --json-report
     --json-report-file=test-results/results.json
     --tracing=retain-on-failure
+    --strict-markers
     -m "not specific_requirement"
 
 # Allows pytest to identify the base of this project as the pythonpath
