--- a/.github/workflows/delete-docker-image.yaml
+++ b/.github/workflows/delete-docker-image.yaml
@@ -38,7 +38,7 @@ jobs:
         run: |
           # Extract the ticket from the branch name
 
-          BRANCH_NAME="${{ github.event.pull_request.base.ref }}"
+          BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
 
           TICKET=$(echo "$BRANCH_NAME" | grep -oiE '[a-z]+[0-9]+-[0-9]+')
           IMAGE_TAG="${TICKET}_current"
